--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <li style="color:red">
     <a href="red.html" style="color: red">Red Page</a>
   </li>  
+  <li style="color:blue">
+    <a href="red.html" style="color: blue">Blue Page</a>
+  </li>    
 </ul>
 
 
