fix index for blue

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="red.html" style="color: red">Red Page</a>
   </li>  
   <li style="color:blue">
-    <a href="red.html" style="color: blue">Blue Page</a>
+    <a href="blue.html" style="color: blue">Blue Page</a>
   </li>    
 </ul>
 
