--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <li style="color:blue">
     <a href="blue.html" style="color: blue">Blue Page</a>
   </li>    
+  <li style="color:purple">
+    <a href="purple.html" style="color: purple">Purple Page</a>
+  </li>    
+
 </ul>
 
 
