--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <p>This is a website about color!</p>    
   
 
-<h2>Navigation</h2>
+<h2>Test Push</h2>
 
 <ul>
   <li style="color:green">
     <a href="green.html" style="color: green">The Green Page</a>
   </li>
+
   <li style="color:red">
     <a href="red.html" style="color: red">Red Page</a>
   </li>  
