change color to peru

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
 </head>
 <body>
-  <h1 style="color:brown">A Colorful Website</h1>
+  <h1 style="color: peru">A Colorful Website</h1>
   <p>This is a website about color!</p>    
   
 
