--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
   <meta charset="utf-8" />
 </head>
 <body>
-<<<<<<< HEAD
-  <h1 style="color: purple">A Colorful Website</h1>
-=======
-  <h1 style="color:brown">A Colorful Website</h1>
->>>>>>> xtwo - brown
+  <h1 style="color: peru">A Colorful Website</h1>
   <p>This is a website about color!</p>    
   
 
